Updated the description for portfolio

--- a/my-portfolio/public/index.html
+++ b/my-portfolio/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Personal portfolio created using create-react-app"
+      content="Showcasing my journey as a Full Stack Developer "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/portfolioIcon.jpeg" />
     <!--
